[package]
name = "futures-sync-bench"
version = "0.1.0"
authors = ["Evgeny Rozaliev <rozaliev@gmail.com>"]

[dependencies.futures]
git = "https://github.com/rust-lang-nursery/futures-rs.git"
default-features = false
features = ["std", "nightly"]

[dependencies]
crossbeam-channel = "0.1"
slab = "*"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "ring"
harness = false